<resources>
    <string name="app_name">restaurant</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Solicitar pedido</string>
    <string name="menu_gallery">Programar entrega y solicitud</string>
    <string name="menu_slideshow">Mostrar Carta</string>
    <string name="menu_tools">Generar reporte de pedido</string>
    <string name="menu_share">Crear menú</string>
    <string name="menu_send">Generar reporte de ventas</string>
    <string name="title_activity_admin">AdminActivity</string>
</resources>
